running nextflow lint formatter

--- a/conf/tests/test.config
+++ b/conf/tests/test.config
@@ -14,18 +14,18 @@ process {
     resourceLimits = [
         cpus: 4,
         memory: '15.GB',
-        time: '1.h'
+        time: '1.h',
     ]
 }
 
 params {
-    config_profile_name        = 'Test profile'
-    config_profile_description = 'Minimal test dataset to check pipeline function'
+    config_profile_name         = 'Test profile'
+    config_profile_description  = 'Minimal test dataset to check pipeline function'
 
     // Input data
-    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
-    outdir    = "testing"
-    metadata  = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
+    input                       = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
+    outdir                      = "testing"
+    metadata                    = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
 
     skip_complexity_filtering   = false
     trim_tool                   = 'fastp'
@@ -48,5 +48,5 @@ params {
 }
 
 process {
-    maxRetries    = 1
+    maxRetries = 1
 }
