--- a/conf/tests/test_fail_db.config
+++ b/conf/tests/test_fail_db.config
@@ -14,7 +14,7 @@ process {
     resourceLimits = [
         cpus: 4,
         memory: '15.GB',
-        time: '1.h'
+        time: '1.h',
     ]
 }
 
@@ -23,26 +23,26 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function with a reference pool without matches'
 
     // Input data
-    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
-    outdir    = "testing"
-    metadata  = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
+    input                      = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
+    outdir                     = "testing"
+    metadata                   = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
 
-    skip_complexity_filtering   = false
-    trim_tool                   = 'fastp'
-    skip_hostremoval            = true
-    assemblers                  = 'spades'
-    skip_sspace_basic           = false
-    skip_iterative_refinement   = true
+    skip_complexity_filtering  = false
+    trim_tool                  = 'fastp'
+    skip_hostremoval           = true
+    assemblers                 = 'spades'
+    skip_sspace_basic          = false
+    skip_iterative_refinement  = true
 
-    skip_read_classification    = true
-    kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
-    reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/ebov-zaire.fasta'
+    skip_read_classification   = true
+    kaiju_db                   = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
+    reference_pool             = params.pipelines_testdata_base_path + 'viralmetagenome/db/ebov-zaire.fasta'
 
-    skip_variant_calling        = true
-    intermediate_mapping_stats  = true
-    skip_checkv                 = true
+    skip_variant_calling       = true
+    intermediate_mapping_stats = true
+    skip_checkv                = true
 }
 
 process {
-    maxRetries    = 1
+    maxRetries = 1
 }
