--- a/conf/tests/test_fail_mapped.config
+++ b/conf/tests/test_fail_mapped.config
@@ -13,7 +13,7 @@ process {
     resourceLimits = [
         cpus: 4,
         memory: '15.GB',
-        time: '1.h'
+        time: '1.h',
     ]
 }
 
@@ -22,25 +22,25 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function with a non mat external reference'
 
     // Input data
-    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
-    outdir    = "testing"
-    metadata  = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
+    input                      = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
+    outdir                     = "testing"
+    metadata                   = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
 
-    skip_complexity_filtering   = false
-    trim_tool                   ='fastp'
-    skip_hostremoval            = true
-    skip_assembly               = true
+    skip_complexity_filtering  = false
+    trim_tool                  = 'fastp'
+    skip_hostremoval           = true
+    skip_assembly              = true
 
-    skip_read_classification    = true
-    kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
-    reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
-    mapping_constraints         = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints_fail.tsv'
+    skip_read_classification   = true
+    kaiju_db                   = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
+    reference_pool             = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
+    mapping_constraints        = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints_fail.tsv'
 
-    min_mapped_reads            = 100
-    intermediate_mapping_stats  = true
-    skip_checkv                 = true
+    min_mapped_reads           = 100
+    intermediate_mapping_stats = true
+    skip_checkv                = true
 }
 
 process {
-    maxRetries    = 1
+    maxRetries = 1
 }
