--- a/conf/tests/test_group.config
+++ b/conf/tests/test_group.config
@@ -14,18 +14,18 @@ process {
     resourceLimits = [
         cpus: 4,
         memory: '15.GB',
-        time: '1.h'
+        time: '1.h',
     ]
 }
 
 
 params {
-    config_profile_name        = 'Test group profile'
-    config_profile_description = 'Minimal test dataset to check pipeline function when combining samples of the same group'
+    config_profile_name         = 'Test group profile'
+    config_profile_description  = 'Minimal test dataset to check pipeline function when combining samples of the same group'
 
     // Input data
-    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet_group.csv'
-    outdir    = "testing"
+    input                       = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet_group.csv'
+    outdir                      = "testing"
     // metadata  = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
 
     skip_complexity_filtering   = false
@@ -40,7 +40,7 @@ params {
     kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
 
     reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
-    mapping_constraints          = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints_group.csv'
+    mapping_constraints         = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints_group.csv'
 
     save_intermediate_polishing = true
     intermediate_mapping_stats  = false
@@ -51,5 +51,5 @@ params {
 }
 
 process {
-    maxRetries    = 1
+    maxRetries = 1
 }
