--- a/conf/tests/test_minimal.config
+++ b/conf/tests/test_minimal.config
@@ -14,7 +14,7 @@ process {
     resourceLimits = [
         cpus: 4,
         memory: '15.GB',
-        time: '1.h'
+        time: '1.h',
     ]
 }
 
@@ -23,16 +23,16 @@ params {
     config_profile_description = 'Skip all steps and run a minimal test'
 
     // Input data
-    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
-    outdir    = "testing"
+    input                      = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
+    outdir                     = "testing"
 
-    skip_preprocessing   = true
-    skip_read_classification = true
-    skip_assembly        = true
-    skip_variant_calling = true
-    skip_consensus_qc    = true
+    skip_preprocessing         = true
+    skip_read_classification   = true
+    skip_assembly              = true
+    skip_variant_calling       = true
+    skip_consensus_qc          = true
 }
 
 process {
-    maxRetries    = 1
+    maxRetries = 1
 }
