--- a/conf/base.config
+++ b/conf/base.config
@@ -10,9 +10,9 @@
 
 process {
 
-    cpus   = { 1      * task.attempt }
-    memory = { 6.GB   * task.attempt }
-    time   = { 4.h    * task.attempt }
+    cpus          = { 1 * task.attempt }
+    memory        = { 6.GB * task.attempt }
+    time          = { 4.h * task.attempt }
 
     errorStrategy = { task.exitStatus in ((130..145) + 104 + 175) ? 'retry' : 'finish' }
     maxRetries    = 1
@@ -25,36 +25,36 @@ process {
     //        adding in your local modules too.
 
     // See https://www.nextflow.io/docs/latest/config.html#config-process-selectors
-    withLabel:process_single {
-        cpus   = { 1                   }
+    withLabel: process_single {
+        cpus   = { 1 }
         memory = { 6.GB * task.attempt }
-        time   = { 4.h  * task.attempt }
+        time   = { 4.h * task.attempt }
     }
-    withLabel:process_low {
-        cpus   = { 2     * task.attempt }
+    withLabel: process_low {
+        cpus   = { 2 * task.attempt }
         memory = { 12.GB * task.attempt }
-        time   = { 4.h   * task.attempt }
+        time   = { 4.h * task.attempt }
     }
-    withLabel:process_medium {
-        cpus   = { 6     * task.attempt }
+    withLabel: process_medium {
+        cpus   = { 6 * task.attempt }
         memory = { 36.GB * task.attempt }
-        time   = { 8.h   * task.attempt }
+        time   = { 8.h * task.attempt }
     }
-    withLabel:process_high {
-        cpus   = { 12    * task.attempt }
+    withLabel: process_high {
+        cpus   = { 12 * task.attempt }
         memory = { 72.GB * task.attempt }
-        time   = { 16.h  * task.attempt }
+        time   = { 16.h * task.attempt }
     }
-    withLabel:process_long {
-        time   = { 20.h  * task.attempt }
+    withLabel: process_long {
+        time = { 20.h * task.attempt }
     }
-    withLabel:process_high_memory {
+    withLabel: process_high_memory {
         memory = { 200.GB * task.attempt }
     }
-    withLabel:error_ignore {
+    withLabel: error_ignore {
         errorStrategy = 'ignore'
     }
-    withLabel:error_retry {
+    withLabel: error_retry {
         errorStrategy = 'retry'
         maxRetries    = 2
     }
@@ -64,11 +64,11 @@ process {
     }
 
     withName: KRAKEN2_HOST_REMOVE {
-        memory     = { 200.GB * task.attempt }
+        memory = { 200.GB * task.attempt }
     }
 
     withName: KAIJU_KAIJU {
-        memory     = { 200.GB * task.attempt }
+        memory = { 200.GB * task.attempt }
     }
 
     withName: BRACKEN_BRACKEN {
@@ -76,16 +76,16 @@ process {
     }
 
     withName: TRINITY {
-        cpus          = { 12    * task.attempt } // defeault was 1
+        cpus          = { 12 * task.attempt }
         errorStrategy = 'ignore'
     }
 
     withName: MAFFT_QC {
-        errorStrategy = { (task.attempt <= process.maxRetries) ? 'retry' : 'ignore' }
+        errorStrategy = { task.attempt <= process.maxRetries ? 'retry' : 'ignore' }
     }
 
-    withName: MMSEQS_EASYSEARCH  {
-        errorStrategy = { (task.attempt <= process.maxRetries) ? 'retry' : 'ignore' }
+    withName: MMSEQS_EASYSEARCH {
+        errorStrategy = { task.attempt <= process.maxRetries ? 'retry' : 'ignore' }
     }
 
     withName: CHECKV_ENDTOEND {
@@ -95,5 +95,4 @@ process {
     withName: BLASTN_QC {
         errorStrategy = { task.exitStatus == 3 ? 'ignore' : 'retry' }
     }
-
 }
