--- a/conf/tests/test_full.config
+++ b/conf/tests/test_full.config
@@ -14,20 +14,20 @@ process {
     resourceLimits = [
         cpus: 4,
         memory: '15.GB',
-        time: '1.h'
+        time: '1.h',
     ]
 }
 
 
 params {
-    config_profile_name        = 'Full test profile'
-    config_profile_description = 'Full test dataset to check pipeline function'
+    config_profile_name         = 'Full test profile'
+    config_profile_description  = 'Full test dataset to check pipeline function'
 
     // Input data
-    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet_full.csv'
-    outdir    = "testing"
-    metadata  = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_testfull.tsv'
-    prefix    = 'test'
+    input                       = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet_full.csv'
+    outdir                      = "testing"
+    metadata                    = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_testfull.tsv'
+    prefix                      = 'test'
 
     skip_complexity_filtering   = false
     trim_tool                   = 'fastp'
@@ -50,5 +50,5 @@ params {
 }
 
 process {
-    maxRetries    = 1
+    maxRetries = 1
 }
