--- a/nextflow.config
+++ b/nextflow.config
@@ -67,15 +67,13 @@ params {
     skip_sspace_basic           = true
     skip_contig_prinseq         = false
     read_distance               = 350
-    read_distance_sd            = .75
+    read_distance_sd            = 0.75
     read_orientation            = "FR"
 
     // > SPADES
     spades_mode                 = 'rnaviral'
     spades_hmm                  = null
     spades_yml                  = null
-    // > MEGAHIT
-    // > TRINITY
 
 
     // GENOME POLISHING
@@ -96,9 +94,8 @@ params {
     skip_precluster                  = false
     precluster_classifiers           = 'kraken2,kaiju'
 
-    // >> CDHITEST
     // >> VSEARCH
-    max_contig_size             = 10000000 // 10 Mb Max for human viruses is around 1Mb
+    max_contig_size                  = 10000000 // 10 Mb Max for human viruses is around 1Mb
 
     // > Iterative mapping & consensus calling
     skip_iterative_refinement       = false
@@ -137,7 +134,6 @@ params {
 
     // Global
     prefix                      = null
-    // global_prefix               = null
 
     // MultiQC options
     multiqc_config              = null
@@ -177,7 +173,8 @@ params {
     arguments_fastp             = '--cut_front --cut_tail --trim_poly_x --cut_mean_quality 30 --qualified_quality_phred 30 --unqualified_percent_limit 10 --length_required 50'
     arguments_trimmomatic       = "ILLUMINACLIP:${params.adapter_fasta}:2:30:10"
     arguments_umitools_extract  = '--umi-separator ":"'
-    // leave empty for directional strategy add -x for cluster strategy
+
+    // Humid's default deduplication strategy is the directional one, for a clustering strategy add -x (see docs on preprocessing)
     arguments_humid             = '-a -m 1'
     arguments_bbduk             = 'entropy=0.3 entropywindow=50 entropymask=f'
     arguments_prinseq_reads     = null
@@ -263,7 +260,7 @@ params {
     arguments_checkv            = '--remove_tmp'
     arguments_mafft_iterations  = '--auto --adjustdirection'
     arguments_mafft_qc          = '--auto --adjustdirection'
-    params.arguments_blastn_qc  = '-max_target_seqs 5'
+    arguments_blastn_qc         = '-max_target_seqs 5'
     arguments_prokka            = '--centre X --compliant --force --kingdom Viruses'
     arguments_mmseqs_search     = '--search-type 4 --rescore-mode 3'
     arguments_quast_qc          = null
@@ -388,13 +385,13 @@ profiles {
         executor.cpus           = 4
         executor.memory         = 8.GB
     }
-    test              { includeConfig 'conf/tests/test.config'              }
-    test_full         { includeConfig 'conf/tests/test_full.config'         }
-    test_group        { includeConfig 'conf/tests/test_group.config'        }
-    test_umi          { includeConfig 'conf/tests/test_umi.config'          }
-    test_fail_mapped  { includeConfig 'conf/tests/test_fail_mapped.config'  }
-    test_fail_db      { includeConfig 'conf/tests/test_fail_db.config'      }
-    test_minimal      { includeConfig 'conf/tests/test_minimal.config'      }
+    test              { includeConfig 'conf/test.config'              }
+    test_full         { includeConfig 'conf/test_full.config'         }
+    test_group        { includeConfig 'conf/test_group.config'        }
+    test_umi          { includeConfig 'conf/test_umi.config'          }
+    test_fail_mapped  { includeConfig 'conf/test_fail_mapped.config'  }
+    test_fail_db      { includeConfig 'conf/test_fail_db.config'      }
+    test_minimal      { includeConfig 'conf/test_minimal.config'      }
 }
 
 // Load nf-core custom profiles from different institutions
