update snapshots & fix bug in cat/cat

--- a/conf/tests/test_full.config
+++ b/conf/tests/test_full.config
@@ -33,7 +33,7 @@ params {
     trim_tool                   = 'fastp'
     host_k2_db                  = params.pipelines_testdata_base_path + 'viralmetagenome/db/kraken2_hs22.tar.gz'
     skip_sspace_basic           = false
-    assemblers                  = 'megahit,trinity,spades'
+    assemblers                  = 'megahit'
 
     skip_read_classification    = true
     save_databases              = false
@@ -46,6 +46,7 @@ params {
     prokka_db                   = params.pipelines_testdata_base_path + 'viralmetagenome/db/U-RVDBv29.0-prot_clustered.subset.fasta.xz'
 
     save_intermediate_polishing = true
+    iterative_refinement_cycles = 1
     min_mapped_reads            = 100
     intermediate_mapping_stats  = true
     skip_vcf_annotation         = true
