--- a/conf/tests/test_umi.config
+++ b/conf/tests/test_umi.config
@@ -31,20 +31,18 @@ params {
     with_umi                    = true
     skip_umi_extract            = false
     umi_deduplicate             = 'both'
-    host_k2_db                  = params.pipelines_testdata_base_path + 'viralmetagenome/db/kraken2_hs22.tar.gz'
+    skip_hostremoval            = true
+    skip_polishing              = true
+    skip_sspace_basic           = true
     assemblers                  = 'spades'
 
     skip_read_classification    = true
-    save_databases              = true
-    skip_sspace_basic           = false
-    kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
-    reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
+    save_databases              = false
     annotation_db               = params.pipelines_testdata_base_path + 'viralmetagenome/db/virosaurus90_vertebrate-20200330.subset.fas.gz'
 
     mapping_constraints         = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints.csv'
-    save_intermediate_polishing = true
-    save_intermediate_reads     = true
-    intermediate_mapping_stats  = true
+    save_intermediate_reads     = false
+    intermediate_mapping_stats  = false
     min_mapped_reads            = 100
     skip_checkv                 = true
     skip_vcf_annotation         = true
