--- a/conf/test_fail_mapped.config
+++ b/conf/test_fail_mapped.config
@@ -19,7 +19,7 @@ process {
 
 params {
     config_profile_name        = 'Test failed mapped profile'
-    config_profile_description = 'Minimal test dataset to check pipeline function with a non mat external reference'
+    config_profile_description = "Minimal test dataset to check pipeline function with a mapping constraints that don't match the samples"
 
     // Input data
     input                      = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
