add support for bowtie2 for host remove

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -214,6 +214,36 @@ process {
         ]
     }
 
+    withName: BOWTIE2_BUILD_HOST_REMOVE {
+        ext.prefix = { "${meta.id}_bowtie2_host" }
+        ext.args = params.arguments_bowtie2_build_host
+        publishDir = [
+            path: { "${params.outdir}/preprocessing/hostremoval-bowtie2/index" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: BOWTIE2_ALIGN_HOST_REMOVE {
+        ext.prefix = { "${meta.id}_bowtie2_host" }
+        ext.args = params.arguments_bowtie2_align_host
+        publishDir = [
+            [
+                path: { "${params.outdir}/preprocessing/hostremoval-bowtie2/" },
+                mode: params.publish_dir_mode,
+                pattern: "*log",
+                saveAs: { filename -> params.prefix || params.global_prefix  ? "${params.global_prefix}-$filename" : filename }
+            ],
+            [
+                path: { "${params.outdir}/preprocessing/hostremoval-bowtie2/" },
+                mode: params.publish_dir_mode,
+                pattern: "*.fastq.gz",
+                enabled: params.save_intermediate_reads || save_final_reads == 'host',
+                saveAs: { filename -> params.prefix || params.global_prefix  ? "${params.global_prefix}-$filename" : filename }
+            ]
+        ]
+    }
+
     withName: FASTQC_HOST {
         ext.prefix = { "${meta.id}_host" }
         ext.args   = params.arguments_fastqc
