--- a/conf/test_group.config
+++ b/conf/test_group.config
@@ -31,7 +31,8 @@ params {
     trim_tool                   = 'fastp'
     assemblers                  = 'spades,megahit'
     skip_sspace_basic           = true
-    host_k2_db                  = params.pipelines_testdata_base_path + 'viralmetagenome/db/kraken2_hs22.tar.gz'
+    host_removal_tool           = 'bowtie2'
+    host_bowtie2_reference      = params.pipelines_testdata_base_path + 'viralmetagenome/genomes/chr22_23800000-23980000.fa'
 
     skip_read_classification    = true
     merge_reads                 = true
