--- a/nextflow.config
+++ b/nextflow.config
@@ -41,7 +41,9 @@ params {
 
     // > host removal
     skip_hostremoval            = false
+    host_removal_tool           = 'kraken2' // bowtie2, kraken2
     host_k2_db                  = 's3://ngi-igenomes/test-data/viralrecon/kraken2_human.tar.gz'
+    host_bowtie2_reference      = null
     skip_host_fastqc            = false
 
     // METAGENOMIC DIVERSITY
@@ -175,11 +177,13 @@ params {
     arguments_umitools_extract  = '--umi-separator ":"'
 
     // Humid's default deduplication strategy is the directional one, for a clustering strategy add -x (see docs on preprocessing)
-    arguments_humid             = '-a -m 1'
-    arguments_bbduk             = 'entropy=0.3 entropywindow=50 entropymask=f'
-    arguments_prinseq_reads     = null
-    arguments_kraken2_host      = null
-    arguments_blast_makeblastdb = '-dbtype nucl'
+    arguments_humid              = '-a -m 1'
+    arguments_bbduk              = 'entropy=0.3 entropywindow=50 entropymask=f'
+    arguments_prinseq_reads      = null
+    arguments_kraken2_host       = null
+    arguments_bowtie2_build_host = null
+    arguments_bowtie2_align_host = '--local --very-sensitive-local --seed 1'
+    arguments_blast_makeblastdb  = '-dbtype nucl'
 
     arguments_kraken2           = '--report-minimizer-data'
     arguments_bracken           = null
