--- a/subworkflows/local/fastq_bowtie2_kraken_host_remove/meta.yml
+++ b/subworkflows/local/fastq_bowtie2_kraken_host_remove/meta.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
-name: fastq_kraken_host_remove
+name: fastq_bowtie2_kraken_host_remove
 description: Remove host contamination from FASTQ files using Kraken2 with optional FastQC quality control
 keywords:
   - host removal
@@ -20,6 +20,14 @@ input:
       description: |
         Kraken2 database containing host reference sequences
         Structure: [ path(kraken2_host_db) ]
+  - host_fna:
+      description: |
+        Nucleotide fasta file represting the genomes required for host removal.
+        Structure: [ path(fna) ]
+  - tool:
+      type: string
+      description: |
+        Define which tool that is being used for host reads removal, Kraken2 or Bowtie2
   - skip_fastqc:
       type: boolean
       description: |
