--- a/nextflow.config
+++ b/nextflow.config
@@ -99,7 +99,7 @@ params {
 
     // > Iterative mapping & consensus calling
     skip_iterative_refinement       = false
-    mapper                          = 'bwamem2' // bwamem2, bowtie2, bwamem
+    mapper                          = 'bwamem2' // bwamem2, bowtie2
     intermediate_mapper             = mapper
     iterative_refinement_cycles     = 2
     deduplicate                     = true
