patch crate and other remains of bwamem

--- a/subworkflows/local/fastq_fasta_map_consensus/meta.yml
+++ b/subworkflows/local/fastq_fasta_map_consensus/meta.yml
@@ -29,7 +29,7 @@ input:
       type: string
       description: |
         Mapping algorithm to use
-      enum: ["bwamem2", "bowtie2", "bwa"]
+      enum: ["bwamem2", "bowtie2"]
   - umi:
       type: boolean
       description: |
