--- a/subworkflows/local/map_reads/meta.yml
+++ b/subworkflows/local/map_reads/meta.yml
@@ -5,7 +5,6 @@ keywords:
   - mapping
   - alignment
   - reads
-  - bwa
   - bwamem2
   - bowtie2
   - index
@@ -15,8 +14,6 @@ components:
   - bwamem2/mem
   - bowtie2/build
   - bowtie2/align
-  - bwa/index
-  - bwa/mem
 input:
   - ch_reference_reads:
       description: |
@@ -26,7 +23,7 @@ input:
       type: string
       description: |
         The mapping algorithm to use
-      enum: ["bwamem2", "bowtie2", "bwa"]
+      enum: ["bwamem2", "bowtie2"]
 output:
   - bam:
       description: |
