add html to languange ignore in gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.config linguist-language=nextflow
 *.nf.test linguist-language=nextflow
+*.html linguist-vendorderd=false
 modules/nf-core/** linguist-generated
 subworkflows/nf-core/** linguist-generated
