--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 *.config linguist-language=nextflow
 *.nf.test linguist-language=nextflow
-*.html linguist-vendorderd=false
 modules/nf-core/** linguist-generated
 subworkflows/nf-core/** linguist-generated
+
+# The big MultiQC HTML report shouldn't count towards repo language breakdown
+assets/test_full-multiqc_report.html linguist-generated
