adding a local config for running the pipeline locally.

--- a/conf/base.config
+++ b/conf/base.config
@@ -60,11 +60,11 @@ process {
     }
 
     withName: KRAKEN2_HOST_REMOVE {
-        memory = { 200.GB * task.attempt }
+        label = 'process_high_memory'
     }
 
     withName: KAIJU_KAIJU {
-        memory = { 200.GB * task.attempt }
+        label = 'process_high_memory'
     }
 
     withName: BRACKEN_BRACKEN {
