--- a/nextflow.config
+++ b/nextflow.config
@@ -83,6 +83,7 @@ params {
 
     // > BLAST
     reference_pool              = "https://rvdb.dbi.udel.edu/download/C-RVDBvCurrent.fasta.gz"
+    blacklist                   = null
 
     // > Clustering
     cluster_method                   = 'cdhitest'
