--- a/conf/local.config
+++ b/conf/local.config
@@ -9,4 +9,7 @@ process {
 params {
     config_profile_name        = 'Running on a local desktop profile'
     config_profile_description = 'Profile for running the pipeline on a local desktop or laptop computer with limited resources.'
+
+    // default RVDB requires >75GB RAM
+    kaiju_db                  = 'https://kaiju-idx.s3.eu-central-1.amazonaws.com/2024/kaiju_db_viruses_2024-08-15.tgz'
 }
