--- a/nextflow.config
+++ b/nextflow.config
@@ -502,6 +502,7 @@ plugins {
 validation {
     defaultIgnoreParams = ["genomes"]
     monochromeLogs = params.monochrome_logs
+    lenientMode = true
     help {
         enabled = true
         command = "nextflow run nf-core/viralmetagenome -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
