--- a/assets/schemas/mapping_constraints.json
+++ b/assets/schemas/mapping_constraints.json
@@ -35,7 +35,7 @@
             "segment": {
                 "errorMessage": "Segment cannot contain spaces or special characters with the exception of '-' and '.'. Segment is unique in combination with species",
                 "meta": ["segment"],
-                "type": ["string", "integer"],
+                "type": "string",
                 "pattern": "^(?!.*\\_)[A-Za-z0-9\\-\\.]+$"
             },
             "selection": {
