--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -12,9 +12,7 @@ nf_core_version: 3.4.1
 repository_type: pipeline
 template:
   author: Joon Klaps, Philippe Lemey, Liana Kafetzopoulou
-  description: A bioinformatics best-practice analysis pipeline for untargeted viral
-    genome reconstruction and to identify intra-host variants from metagenomic sequencing
-    data.
+  description: A bioinformatics best-practice analysis pipeline for untargeted viral genome reconstruction and to identify intra-host variants from metagenomic sequencing data.
   force: false
   is_nfcore: true
   name: viralmetagenome
@@ -22,4 +20,4 @@ template:
   outdir: .
   skip_features:
     - igenomes
-  version: 1.0.0
+  version: 1.1.0dev
