--- a/nextflow.config
+++ b/nextflow.config
@@ -497,7 +497,7 @@ manifest {
     mainScript      = 'main.nf'
     defaultBranch   = 'master'
     nextflowVersion = '!>=25.04.0'
-    version         = '1.0.0'
+    version         = '1.1.0dev'
     doi             = ''
 }
 
