--- a/nextflow.config
+++ b/nextflow.config
@@ -498,7 +498,7 @@ manifest {
     defaultBranch   = 'master'
     nextflowVersion = '!>=25.04.0'
     version         = '1.1.0dev'
-    doi             = ''
+    doi             = 'https://doi.org/10.5281/zenodo.17524075'
 }
 
 // Nextflow plugins
