--- a/nextflow.config
+++ b/nextflow.config
@@ -498,7 +498,7 @@ manifest {
     defaultBranch   = 'master'
     nextflowVersion = '!>=25.04.0'
     version         = '1.0.0'
-    doi             = ''
+    doi             = '10.5281/zenodo.17524074'
 }
 
 // Nextflow plugins
